# mailfilter-landing

./: .gitignore  CLAUDE.md  index.html  mailfilter-business-plan.md  snailsense-business-plan.md
app/: .env.example  Dockerfile  Procfile  alembic.ini  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 0001_initial_schema.py
app/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/app/auth/: __init__.py  google_tokens.py  router.py  session.py  supabase_client.py
app/app/dashboard/: router.py
app/app/impact/: calculator.py
app/app/mail/: router.py
app/app/optout/: router.py
app/app/static/: style.css
app/app/templates/: base.html  login.html
app/app/workers/: worker.py
poc/: .env.example  com.mailfilter.poc.plist  com.snailsense.poc.plist
poc/scripts/: setup_auth.py
poc/src/: classifier.py  config.py  gmail_reader.py  main.py  sheets_logger.py
strategy/: market-research.md  phase1-implementation.md  phases.md
